=== gnome-icon-theme 1.1.3 ===
	
2003-12-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 1.1.3

2003-12-05  Jakub Steiner <jimmac@ximian.com>

   * {16x16,24x24,32x32,48x48}/stock/data/Makefile.am
	* 16x16/stock/data/stock_signature-bad.png
	* 16x16/stock/data/stock_signature-ok.png
	* 16x16/stock/data/stock_signature.png
	* 24x24/stock/data/stock_signature-bad.png
	* 24x24/stock/data/stock_signature-ok.png
	* 24x24/stock/data/stock_signature.png
	* 32x32/stock/data/stock_signature-bad.png
	* 32x32/stock/data/stock_signature-ok.png
	* 32x32/stock/data/stock_signature.png
	* 48x48/stock/data/stock_signature-bad.png
	* 48x48/stock/data/stock_signature-ok.png
	* 48x48/stock/data/stock_signature.png: icons for signed messages
	  (Evolution)

2003-12-05  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/config-language.png: this is weird, I didn't add
	  this one either.
	
2003-12-05  Jakub Steiner <jimmac@ximian.com>

	* 24x24/apps/config-language.png: this wasn't added for some
	  reason
	* 32x32/stock/generic/stock_language.png: removed a duplicate of
	  config-language
	
2003-12-04  Jakub Steiner <jimmac@ximian.com>

	* 48x48/stock/data/Makefile.am
	* 48x48/stock/data/stock_lock-broken.png
	* 48x48/stock/data/stock_lock-ok.png
	* 48x48/stock/data/stock_lock.png
	* 48x48/stock/Makefile.am
	* 32x32/stock/data/Makefile.am
	* 32x32/stock/data/stock_lock-broken.png
	* 32x32/stock/data/stock_lock-ok.png
	* 32x32/stock/data/stock_lock.png
	* 24x24/stock/data/Makefile.am
	* 24x24/stock/data/stock_lock-broken.png
	* 24x24/stock/data/stock_lock-ok.png
	* 24x24/stock/data/stock_lock.png
	* 16x16/stock/data/Makefile.am
	* 16x16/stock/data/stock_lock-broken.png
	* 16x16/stock/data/stock_lock-ok.png
	* 16x16/stock/data/stock_lock.png
	* onfigure.in: icons for encrypted messages (Evolution)

2003-11-26  Vincent Untz  <vincent@vuntz.net>

	* 48x48/apps/Makefile.am: we want to install
	panel-notification-area.png too

=== gnome-icon-theme 1.1.2 ===
	