@@ -1,3 +1,13 @@
+2003-12-09  Jakub Steiner <jimmac@ximian.com>
+
+	* 48x48/emblems/Makefile.am
+	* 48x48/emblems/emblem-cvs-added.png
+	* 48x48/emblems/emblem-cvs-conflict.png
+	* 48x48/emblems/emblem-cvs-controlled.png
+	* 48x48/emblems/emblem-cvs-modified.png
+	* 48x48/emblems/emblem-cvs-sticky-tag.png: CVS emblems for
+	  nautilus
+
 === gnome-icon-theme 1.1.3 ===
 	
 2003-12-08  Alexander Larsson  <alexl@redhat.com>
